# weather-mcp

./: README.md  pyproject.toml  test_client.py  weather.py
client/: chat.py  mcp_client.py  ollama_client.py
server/: schemas.py  tools.py  weather.py  weather_api.py  weather_codes.py
shared/: config.py  models.py  utils.py
