[project]
name = "weather-mcp"
version = "1.0.0"
description = "Weather MCP Server with Local LLM Client"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "mcp[cli]>=1.10.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]

[project.scripts]
weather-server = "server.weather:main"
weather-chat = "client.chat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "server",
    "client",
    "shared"
]